test/1.4/errors/T_EBTYPE.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method m() {}

method init() {
    // no error
    after 'a' s: m();
    after 'a' cycles: m();
    after cast(1,uint64_be_t) cycles: m();
    /// ERROR EBTYPE
    after true s: m();
    /// ERROR EBTYPE
    after NULL s: m();
    /// ERROR EBTYPE
    after true cycles: m();
    /// ERROR EBTYPE
    after NULL cycles: m();

    local struct { hook() h; } str;
    // The precedence rules gives usages of "->" as binds precedence before
    // pointer subreferences
    /// ERROR EBTYPE
    after (&str)->h: m();
    // no error
    after ((&str)->h): m();
    after (&str)->h -> (): m();
}

bank b {
    register r size 4 @ unmapped_offset {
        /// ERROR EBTYPE
        field f @ [4.3:0];
    }
}
